# AI-Worklfow-Managment

./: .gitignore  AGENT_CREATION_README.md  CONVERSATION_SYSTEM_README.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  package-lock.json  package.json  setup_and_run.py  start_backend.ps1  start_backend.py  start_backend.sh  test_conversation.py
agents/: main.py  pyproject.toml
agents/src/: __init__.py  agents.py  auth.py  main.py  models.py  utils.py  workflow.py
backend/: main.py
docker/: .dockerignore  docker-compose.yml
docker/backend/: backend.DockerFile
docker/frontend/: frontend.DockerFile
prisma/: dev.db  schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/app/add-agent/: page.tsx
src/app/agent/[id]/: page.tsx
src/app/agents/: page.tsx
src/app/api/agents/: route.ts
src/app/api/agents/[id]/: route.ts
src/app/api/workflows/: route.ts
src/app/edit-agent/[id]/: page.tsx
src/app/tools/: page.tsx
src/app/workflow/: page.tsx
src/components/: AppSidebar.tsx  FilePickerButton.tsx  Navbar.tsx  SidebarLayout.tsx
src/components/auth/: AuthGuard.tsx  LoginModal.tsx  RegisterModal.tsx
src/components/ui/: sidebar.tsx
src/components/workflow/: AgentCard.tsx  ToolCard.tsx  WorkflowCanvas.tsx  WorkflowEdges.tsx  WorkflowExecutionModal.tsx  WorkflowHeader.tsx  WorkflowNodes.tsx  WorkflowRightSidebar.tsx  WorkflowSaveModal.tsx  WorkflowSidebar.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useAgents.ts  useWorkflows.ts
src/lib/: auth-api.ts  auth.ts  workflow-api.ts
src/models/: Agent.ts
src/types/: workflow.ts
(+5 files in other folders)
